# gene_circuit_design

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFIG_USAGE.md  README.md  REFACTORING_PLAN.md  active_learning_results.csv  check_gp_input.py  combine_results_and_plot.py  data_new  filter_high_expressions.py  generate_plots.py  inspect_pt_file.py  main.py  merge_enformer_with_expressions.py  plot_regressor_comparison.py  pyproject.toml  requirements.txt  run_active_learning.py  run_all_experiments.py  run_and_plot.py  run_experiments.py  run_experiments_parallelization.py  run_experiments_parallelization_example.py  uv.toml  visualize_all_results.py  visualize_all_results_smart.py  visualize_enformer_umap.py
configs/: enformer.yaml  experiment_configs.yaml  experiment_configs_166k_regressors.yaml  experiment_configs_3_regressors.yaml  feng_2023.yaml  final_configs.yaml  final_configs_test.yaml  generate_experiment_yaml.py  onehot.yaml  pca.yaml  remove_nan.py
core/: README.md  __init__.py  botorch_models.py  data_loader.py  experiment.py  initial_selection_strategies.py  metrics_calculator.py  predictor_trainer.py  query_strategies.py  round_tracker.py  uncertainty.py
data_new/: remove_nan.py
experiments/: active_learning.py  run_experiments.py  run_experiments_parallelization.py  selection_strategies.py  util.py
job_sub/: __init__.py  aggregate_summaries.py  datasets.yaml  embeddings_2.npz  get_166k_filtered_indices.py  launch_slurm_job.sh  report_failed_jobs.py  run_config.py  run_experiments.py  seed_runner.py  sequential_parallel_job_test.py
plots_regressor_test/: results_summary.md
plotting/: area_under_curve_grid_plot.py  averaged_performance_analysis.py  compare_top_k_selections.py  merge_top10_ratio_pdfs.py  new_file_plot_gen.py  plot_by_alpha.py  visualize_all_result.py  visualize_all_results.py
results_all_strategies/: active_all_seeds_results.csv  active_seed_123_results.csv  active_seed_42_results.csv  active_seed_456_results.csv  active_seed_789_results.csv  active_seed_999_results.csv  combined_all_custom_metrics.csv  combined_all_results.csv  highExpression_all_seeds_custom_metrics.csv  highExpression_all_seeds_results.csv  highExpression_seed_123_results.csv  highExpression_seed_123_results_custom_metrics.csv  highExpression_seed_42_results.csv  highExpression_seed_42_results_custom_metrics.csv  highExpression_seed_456_results.csv  highExpression_seed_456_results_custom_metrics.csv  highExpression_seed_789_results.csv  highExpression_seed_789_results_custom_metrics.csv  highExpression_seed_999_results.csv  (+26 more)
test/: test_util.py  (+29 more)
(+441 files in other folders)
