[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gene-circuit-design"
version = "0.1.0"
description = "Active learning for DNA sequence-expression prediction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Research Team", email = "research@example.com"},
]
keywords = ["active-learning", "dna-sequences", "gene-expression", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/gene-circuit-design"
Repository = "https://github.com/your-org/gene-circuit-design.git"
Issues = "https://github.com/your-org/gene-circuit-design/issues"

[project.scripts]
run-active-learning = "run_experiments:main"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.ruff]
line-length = 88
target-version = "py38"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101"]  # Allow assert statements in tests

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "pre-commit>=3.5.0",
    "ruff>=0.11.13",
    "safetensors>=0.5.3",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
